[package]
name = "cocoa-colors"
version = "0.1.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Get non-deprecated cocoa colors"
repository = "https://github.com/MoAlyousef/cocoa-colors"
documentation = "https://docs.rs/cocoa-colors"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[build-dependencies]
cc = "1"